--- a/index.html
+++ b/index.html
@@ -1,1 +1,24 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chat and Visitor Counter</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+    <h1>Welcome to the Live Chat</h1>
+
+    <div id="chatBox">
+        <!-- Chat messages will go here -->
+    </div>
+
+    <input type="text" id="messageInput" placeholder="Type a message...">
+    <button onclick="sendMessage()">Send</button>
+
+    <h2>Visitor Count: <span id="visitorCount">Loading...</span></h2>
+
+    <script src="script.js"></script>
+</body>
+</html>
